src/objects/Trigger__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines whether a Trigger is enabled in a certain context and which trigger handler to call.

&quot;Trigger Name&quot; is the name of the trigger as in ApexTriggers.
&quot;before&quot;, &quot;after&quot;, &quot;insert&quot;, &quot;update&quot;, &quot;delete&quot; define the context to be considered.
&quot;enabled&quot; specifies whether the trigger is enabled or disabled in this context.

On start of a trigger this CustomerSetting is checked for the trigger&apos;s name and the current context.
If the trigger is disabled, it is not processed, execution terminates.</description>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Handler__c</fullName>
        <description>Name of an Apex class that implements interface TriggerHandlerIf and contains all code to be executed if the trigger is called.</description>
        <inlineHelpText>Name of an Apex class that implements interface TriggerHandlerIf and contains all code to be executed if the trigger is called.</inlineHelpText>
        <label>Trigger Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <description>Name of the trigger (can be multiply used with different context settings)</description>
        <label>Trigger Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>after__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger after execution of an event</description>
        <label>after</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger before execution of an event</description>
        <label>before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger on delete events</description>
        <label>delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the trigger for the specified context enabled or disabled (default is enabled).</description>
        <label>enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>insert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger on insert events</description>
        <label>insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger on update events</description>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger</label>
</CustomObject>